# ai-guard

./: .dockerignore  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  build.rs  clippy.toml  cspell.json  justfile
.github/workflows/: publish-docker.yml  release.yml
.zed/: settings.json
frontend/: auto-import.d.ts  package.json  pnpm-lock.yaml  rspack.config.mjs  tsconfig.json
frontend/patches/: @mantou__gem.patch
frontend/public/: index.html
frontend/src/: actions.ts  api.ts  enums.ts  main.css  main.ts  store.ts  theme.ts  utils.ts
frontend/src/elements/: account-panel.ts  app-root.ts  app-toolbar.ts  app.ts  header.ts  log-detail.ts  log-panel.ts  report-detail.ts  report-panel.ts
src/: api.rs  app_state.rs  assets.rs  audit.rs  config.rs  main.rs  models.rs  payload.rs  proxy.rs  store.rs
